gets labels to align correctly and ensures they dont become unreadable on small screens

--- a/src/components/SingleArticle/SingleArticle.module.scss
+++ b/src/components/SingleArticle/SingleArticle.module.scss
@@ -30,7 +30,7 @@
 
   .tagAndLabelContainer {
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     a {
       text-decoration: none;
       &:not(:first-child) {
